# city-analysis-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/superset/: Dockerfile
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
ingest/: README.md
ingest/crawl/: README.md  air_quality_index_insert.py  cctv_ingest_lifetime.py  cctv_quarantine.py  cctv_to_bmkg.py  cctv_to_kabupaten.py  cctv_to_kecamatan.py  cctv_transform.py  schema.sql  wilayah_kecamatan_kelurahan.sql
ingest/crawl/aqi/: README.md  fetch.py  insert.py  test.py
ingest/crawl/cctv/: README.md  fetch.py  utils.py
ingest/crawl/scheduler/: aqi_scheduler.py  bmkg_scheduler.py  cctv_scheduler.py  main_scheduler.py
ingest/crawl/weather/: README.md  fetch.py  insert.py
ingest/persistent_data/: README.md  cctv_list.json  wilayah_kecamatan_kelurahan.csv
medallion/: .user.yml  README.md  dbt_project.yml  init.sql  profiles.yml
medallion/models/bronze/: _sources.yml
medallion/models/gold/: dim_aqi.sql  dim_camera.sql  dim_date.sql  dim_weather.sql  fact_cctv.sql
medallion/models/silver/: stg_air_quality.sql  stg_cctv.sql  stg_hourly_speed.sql  stg_speed.sql  stg_timeseries_speed.sql  stg_total_hourly_speed.sql  stg_weather.sql
medallion/models/sources/: _sources.yml
raw/: README.md
schema/: README.md  dwh.dbdiagram  dwh.sql  schema.dbdiagram  schema.sql
spark/: .pyiceberg.yaml  Dockerfile
superset/: README.md  bootstrap.sh  superset_config.py
(+10 files in other folders)
