[project]
name = "data-engineer-smart-city-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.5.1",
    "ipython>=9.12.0",
    "pandas>=3.0.2",
    "prettytable>=3.17.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
